[gd_scene load_steps=5 format=3 uid="uid://cvrioh23u641c"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_i0hbu"]
[ext_resource type="Script" path="res://scripts/settings_menu.gd" id="2_4ny8u"]
[ext_resource type="Theme" uid="uid://bjr6aax8yg3qr" path="res://themes_fonts/menu_theme.tres" id="2_811ec"]

[sub_resource type="LabelSettings" id="LabelSettings_li7mr"]
font_size = 106
font_color = Color(0.172549, 0.509804, 1, 1)
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_i0hbu")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_811ec")
theme_override_constants/margin_left = 500
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 500
theme_override_constants/margin_bottom = 50

[node name="StartMenu" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/StartMenu"]
layout_mode = 2
text = "CyberMania"
label_settings = SubResource("LabelSettings_li7mr")
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/StartMenu"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.39

[node name="Play" type="Button" parent="MarginContainer/StartMenu"]
layout_mode = 2
size_flags_vertical = 3
text = "Hrát"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/StartMenu"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.39

[node name="Settings" type="Button" parent="MarginContainer/StartMenu"]
layout_mode = 2
size_flags_vertical = 3
text = "Nastavení"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/StartMenu"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.39

[node name="Exit" type="Button" parent="MarginContainer/StartMenu"]
layout_mode = 2
size_flags_vertical = 3
text = "Odejít"

[node name="SettingsMenu" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
script = ExtResource("2_4ny8u")

[node name="TabContainer" type="TabContainer" parent="MarginContainer/SettingsMenu"]
layout_mode = 2
size_flags_vertical = 3

[node name="Hráč" type="MarginContainer" parent="MarginContainer/SettingsMenu/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/SettingsMenu/TabContainer/Hráč"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/SettingsMenu/TabContainer/Hráč/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/SettingsMenu/TabContainer/Hráč/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Přezdívka hráče:"

[node name="PlayerName" type="LineEdit" parent="MarginContainer/SettingsMenu/TabContainer/Hráč/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/SettingsMenu/TabContainer/Hráč/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/SettingsMenu/TabContainer/Hráč/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Barva hráče:"

[node name="PlayerColor" type="ColorPicker" parent="MarginContainer/SettingsMenu/TabContainer/Hráč/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
color = Color(0.937255, 0.968627, 0.105882, 1)
edit_alpha = false
sampler_visible = false
color_modes_visible = false
sliders_visible = false
hex_visible = false
presets_visible = false

[node name="Obrazovka" type="MarginContainer" parent="MarginContainer/SettingsMenu/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/SettingsMenu/TabContainer/Obrazovka"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/SettingsMenu/TabContainer/Obrazovka/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/SettingsMenu/TabContainer/Obrazovka/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Maximální počet FPS:"

[node name="MaxFps" type="SpinBox" parent="MarginContainer/SettingsMenu/TabContainer/Obrazovka/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
max_value = 999.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/SettingsMenu/TabContainer/Obrazovka/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/SettingsMenu/TabContainer/Obrazovka/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Okno hry:"

[node name="WindowMode" type="OptionButton" parent="MarginContainer/SettingsMenu/TabContainer/Obrazovka/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
item_count = 2
selected = 0
popup/item_0/text = "V okně"
popup/item_0/id = 0
popup/item_1/text = "Celá obrazovka"
popup/item_1/id = 1

[node name="Back" type="Button" parent="MarginContainer/SettingsMenu"]
layout_mode = 2
text = "Zpět"

[node name="MultiplayerMenu" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="PlayerName" type="LineEdit" parent="MarginContainer/MultiplayerMenu"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/MultiplayerMenu"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.39

[node name="Address" type="LineEdit" parent="MarginContainer/MultiplayerMenu"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "1.1.1.1"
alignment = 1

[node name="Connect" type="Button" parent="MarginContainer/MultiplayerMenu"]
layout_mode = 2
size_flags_vertical = 3
text = "Připojit"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/MultiplayerMenu"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.39

[node name="Host" type="Button" parent="MarginContainer/MultiplayerMenu"]
layout_mode = 2
size_flags_vertical = 3
text = "Hostovat"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/MultiplayerMenu"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.39

[node name="Back" type="Button" parent="MarginContainer/MultiplayerMenu"]
layout_mode = 2
size_flags_vertical = 3
text = "Zpět"

[node name="FailedToConnectMenu" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="MarginContainer/FailedToConnectMenu"]
layout_mode = 2
size_flags_vertical = 6
text = "Nepodařilo se navázat spojení"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="MarginContainer/FailedToConnectMenu"]
layout_mode = 2
size_flags_vertical = 3
text = "Zpět"

[node name="ConnectingMenu" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="MarginContainer/ConnectingMenu"]
layout_mode = 2
size_flags_vertical = 6
text = "Připojuji..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Abort" type="Button" parent="MarginContainer/ConnectingMenu"]
layout_mode = 2
size_flags_vertical = 3
text = "Přerušit"

[node name="PauseMenu" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="resume" type="Button" parent="MarginContainer/PauseMenu"]
layout_mode = 2
size_flags_vertical = 3
text = "Zpět do hry"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PauseMenu"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.14

[node name="settings" type="Button" parent="MarginContainer/PauseMenu"]
layout_mode = 2
size_flags_vertical = 3
text = "Nastavení"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/PauseMenu"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.14

[node name="disconnect" type="Button" parent="MarginContainer/PauseMenu"]
layout_mode = 2
size_flags_vertical = 3
text = "Odpojit se"

[node name="ServerDisconnectedMenu" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="MarginContainer/ServerDisconnectedMenu"]
layout_mode = 2
size_flags_vertical = 6
text = "Spojení se servrem přerušeno"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="MarginContainer/ServerDisconnectedMenu"]
layout_mode = 2
size_flags_vertical = 3
text = "Zpět"

[node name="HostMenu" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[connection signal="pressed" from="MarginContainer/StartMenu/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/StartMenu/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/StartMenu/Exit" to="." method="_on_exit_pressed"]
[connection signal="text_changed" from="MarginContainer/SettingsMenu/TabContainer/Hráč/VBoxContainer/HBoxContainer/PlayerName" to="MarginContainer/SettingsMenu" method="_on_player_name_text_changed"]
[connection signal="color_changed" from="MarginContainer/SettingsMenu/TabContainer/Hráč/VBoxContainer/HBoxContainer2/PlayerColor" to="MarginContainer/SettingsMenu" method="_on_player_color_color_changed"]
[connection signal="value_changed" from="MarginContainer/SettingsMenu/TabContainer/Obrazovka/VBoxContainer/HBoxContainer/MaxFps" to="MarginContainer/SettingsMenu" method="_on_max_fps_value_changed"]
[connection signal="item_selected" from="MarginContainer/SettingsMenu/TabContainer/Obrazovka/VBoxContainer/HBoxContainer2/WindowMode" to="MarginContainer/SettingsMenu" method="_on_screen_option_item_selected"]
[connection signal="pressed" from="MarginContainer/SettingsMenu/Back" to="." method="_on_back_pressed"]
[connection signal="text_changed" from="MarginContainer/MultiplayerMenu/PlayerName" to="." method="_on_player_name_text_changed"]
[connection signal="pressed" from="MarginContainer/MultiplayerMenu/Connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="MarginContainer/MultiplayerMenu/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MarginContainer/MultiplayerMenu/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/FailedToConnectMenu/Back" to="." method="_on_failed_to_connect_back_pressed"]
[connection signal="pressed" from="MarginContainer/ConnectingMenu/Abort" to="." method="_on_abort_pressed"]
[connection signal="pressed" from="MarginContainer/PauseMenu/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/PauseMenu/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/PauseMenu/disconnect" to="." method="_on_disconnect_pressed"]
[connection signal="pressed" from="MarginContainer/ServerDisconnectedMenu/Back" to="." method="_on_failed_to_connect_back_pressed"]
